--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -35,7 +35,10 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v5.0.0
-      # comment
       - run: |
           echo "This repository ${{ github.repository }} contains the following files:"
           tree -a
+          echo "test input value: ${{ inputs.test }}"
+          echo "loglevel input: ${{ inputs.loglevel }}"
+          echo "testbuild input: ${{ inputs.testbuild }}"
+          echo "environment input: ${{ inputs.environment }}"
