--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -1,9 +1,6 @@
 name: My First Workflow
 
 on:
-  push:
-    branches: 
-      - main
   workflow_dispatch:
     inputs:
       test:
@@ -55,4 +52,4 @@ jobs:
       - name: Show payload
         if: ${{ github.event_name == 'repository_dispatch' }}
         run: |
-          echo Payload: ${{ github.event.client_payload.unit }}
+          echo Payload: ${{ toJSON(github.event.client_payload) }}
