--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Show payload
         if: ${{ github.event_name == 'repository_dispatch' }}
         run: |
-          echo Payload: ${{ toJSON(github.event.client_payload) }}
+          echo Payload: '${{ toJSON(github.event.client_payload) }}'
