--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -53,3 +53,23 @@ jobs:
         if: ${{ github.event_name == 'repository_dispatch' }}
         run: |
           echo Payload: '${{ toJSON(github.event.client_payload) }}'
+
+  MySecondJob:
+    runs-on: ubuntu-latest
+    steps:
+      - run: "echo Job: ${{ github.job }}"
+    
+  MyThirdJob:
+    runs-on: ubuntu-latest
+    steps:
+      - run: "echo Job: ${{ github.job }}"
+      
+  MyFourthJob:
+    runs-on: ubuntu-latest
+    steps:
+      - run: "echo Job: ${{ github.job }}"
+
+  MyFifthJob:
+    runs-on: ubuntu-latest
+    steps:
+      - run: "echo Job: ${{ github.job }}"
