--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -56,15 +56,18 @@ jobs:
 
   MySecondJob:
     runs-on: ubuntu-latest
+    needs: MyFirstJob
     steps:
       - run: "echo Job: ${{ github.job }}; sleep 30"
     
   MyThirdJob:
     runs-on: ubuntu-latest
+    needs: MyFirstJob
     steps:
       - run: "echo Job: ${{ github.job }}; sleep 30"
       
   MyFourthJob:
+    needs: [MySecondJob, MyThirdJob]
     runs-on: ubuntu-latest
     steps:
       - run: "echo Job: ${{ github.job }}; sleep 30"
