--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -30,7 +30,10 @@ jobs:
   MyFirstJob:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello World!"
+      - name: Hello World
+        run: Write-Host("Help")
+        working-directory: ./temp
+        shell: pwsh
 
       - name: Checkout
         uses: actions/checkout@v5.0.0
@@ -58,21 +61,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: MyFirstJob
     steps:
-      - run: "echo Job: ${{ github.job }}; sleep 30"
+      - run: "echo Job: ${{ github.job }}"
     
   MyThirdJob:
     runs-on: ubuntu-latest
     needs: MyFirstJob
     steps:
-      - run: "echo Job: ${{ github.job }}; sleep 30"
+      - run: "echo Job: ${{ github.job }}"
       
   MyFourthJob:
     needs: [MySecondJob, MyThirdJob]
     runs-on: ubuntu-latest
     steps:
-      - run: "echo Job: ${{ github.job }}; sleep 30"
+      - run: "echo Job: ${{ github.job }}"
 
   MyFifthJob:
     runs-on: ubuntu-latest
     steps:
-      - run: "echo Job: ${{ github.job }}; sleep 30"
+      - run: "echo Job: ${{ github.job }}"
