--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -93,3 +93,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: "echo Job: ${{ github.job }}"
+
+  Post:
+    runs-on: ubuntu-latest
+    steps:
+      - if: success()
+        run: echo "Success!"
+        
+      - if: always()
+        run: echo "Always"
