--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -96,6 +96,8 @@ jobs:
   Post:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "Post"
+
       - if: success()
         run: echo "Success!"
 
