--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -96,7 +96,7 @@ jobs:
   Post:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Post", sleep 30; exit 1
+      - run: echo "Post"; sleep 30; exit 1
 
       - if: failure()
         run: echo "Failed!"
