--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -99,7 +99,9 @@ jobs:
       - run: echo "Post"; exit 1
 
       - if: failure()
-        run: echo "::error file=MyFirstWorkflow.yaml,line=99::Failed!"
+        run: |
+          echo "::debug::Debug message" 
+          echo "::error file=MyFirstWorkflow.yaml,line=99::Failed!"
 
       - if: cancelled()
         run: echo "Cancelled" 
