--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -101,8 +101,8 @@ jobs:
       - if: failure()
         run: |
           echo "::debug::Debug message" 
-          echo "::error file=MyFirstWorkflow.yaml,line=99::Failed!"
-          echo "::warning file=MyFirstWorkflow.yaml,line=99,endLine=105,col=76,endColumn=111,title=warning_title::warning message"
+          echo "::error file=.github/workflows/MyFirstWorkflow.yml,line=99::Failed!"
+          echo "::warning file=.github/workflows/MyFirstWorkflow.yml,line=99,endLine=105,col=76,endColumn=111,title=warning_title::warning message"
 
       - if: cancelled()
         run: echo "Cancelled" 
