--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        os_version: [macos-latest, ubuntu-latest]
+        os_version: [ubuntu-latest]
         node_version: [20, 22, 24]
     runs-on: ${{ matrix.os_version }}
     steps:
